--- a/src/scss/pages/front-page/_front-page.scss
+++ b/src/scss/pages/front-page/_front-page.scss
@@ -10,6 +10,7 @@ body.front-page {
   .front-page_wrapper {
     article.post-type-page {
       .home-section {
+        height: 100vh;
         @include mq("md", "min") {
           height: $panel-height;
         }
@@ -23,21 +24,22 @@ body.front-page {
         &.home-about {
           z-index: 1;
           width: 100%;
-          min-height: 100vh;
           background-color: $white;
           margin: $header-height 0 $footer-height 0;
           padding: $spacing--md;
           @include mq("md", "max") {
-            .back-btn {
-              display: none;
-              width: 100px;
+            &.show {
+              .back-btn {
+                display: none;
+                width: 100px;
+              }
             }
           }
 
           @include mq("md", "min") {
             position: absolute;
             top: 0;
-            transition: transform 0.3s ease; /* Add transition for smooth sliding */
+            transition: transform 0.5s ease; /* Add transition for smooth sliding */
             &.show {
               transform: translateX(0);
               .back-btn {
